--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-    <title>VK</title>
+	<title>Calculator</title>
+	<meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="description" content="CalculatorJS © mjr">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <script type="text/javascript" src="jsss.js"></script>
+	<script type="text/javascript" src="script.js"></script>
+	<link href="https://fonts.googleapis.com/css?family=Cabin+Sketch" rel="stylesheet">
 </head>
-
 <body onkeydown="KeyEvent()" onload="Init()">
     <table>
         <form name="calc">
